--- a/Labs/Roulette_Wheel_Color_Assignment.ipynb
+++ b/Labs/Roulette_Wheel_Color_Assignment.ipynb
@@ -83,10 +83,11 @@
     "        A string: 'green', 'red', 'black', or an error message\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Write your code here\n",
+    "    color = "DUMMY"",  
+    "    # TO BE DONE BY STUDENT: Write your code below\n",
     "    # Remember to handle all the cases described in the instructions\n",
     "    \n",
-    "    pass  # Remove this line and add your code"
+    "    return color  "
    ]
   },
   {
