--- a/Labs/Roulette_Wheel_Color_Assignment.ipynb
+++ b/Labs/Roulette_Wheel_Color_Assignment.ipynb
@@ -83,7 +83,7 @@
     "        A string: 'green', 'red', 'black', or an error message\n",
     "    \"\"\"\n",
     "    \n",
-    "    color = "DUMMY"",  
+    "    color = 'DUMMY'\n",  
     "    # TO BE DONE BY STUDENT: Write your code below\n",
     "    # Remember to handle all the cases described in the instructions\n",
     "    \n",
