--- a/Labs/python101_lab7_while_loops.ipynb
+++ b/Labs/python101_lab7_while_loops.ipynb
@@ -13,9 +13,10 @@
         "1. Read each exercise carefully\n",
         "2. Fill in the code where you see `# YOUR CODE HERE`\n",
         "3. Do NOT modify the test cases\n",
-        "4. Run each cell as you complete it\n",
-        "5. Run the final test cell to see your total score\n",
-        "6. Make sure all test cases pass!\n",
+        "4. Do NOT modify the variable initialization or return statement\n",
+        "5. Run each cell as you complete it\n",
+        "6. Run the final test cell to see your total score\n",
+        "7. Make sure all test cases pass!\n",
         "\n",
         "---"
       ]
@@ -64,10 +65,17 @@
         "    Example:\n",
         "        sum_to_n(5) should return 15 (1+2+3+4+5)\n",
         "    \"\"\"\n",
+        "    # DO NOT MODIFY: Variable initialization\n",
+        "    total = 0\n",
+        "    current = 1\n",
+        "    \n",
         "    # YOUR CODE HERE\n",
-        "    # Hint: Initialize a counter and a sum variable\n",
-        "    # Use a while loop to add numbers from 1 to n\n",
-        "    pass\n",
+        "    # Hint: Use a while loop to add numbers from 1 to n\n",
+        "    # Use the variables 'total' and 'current' that are already initialized\n",
+        "    \n",
+        "    \n",
+        "    # DO NOT MODIFY: Return statement\n",
+        "    return total\n",
         "\n",
         "# Quick test (uncomment to test your function)\n",
         "#print(sum_to_n(5))  # Should print 15"
@@ -79,9 +87,13 @@
         "id": "xS-q1S2ebi5O"
       },
       "source": [
-        "## Exercise 2: While Loop with Break (5 points)\n",
+        "## Exercise 2: While Loop with Break and Continue (5 points)\n",
         "\n",
-        "Create a function that finds the first number divisible by both 7 and 13 within a given range, using `break` to exit early."
+        "This is an extension of Exercise 1. Calculate the sum of numbers from 1 to n, but with special rules:\n",
+        "- **Skip** numbers 3 and 5 (do not include them in the sum) - use `continue`\n",
+        "- **Stop** the loop when you reach 10 (do not include 10 or any numbers after it) - use `break`\n",
+        "\n",
+        "So even if n is 100, you will only sum: 1 + 2 + 4 + 6 + 7 + 8 + 9 = 37"
       ]
     },
     {
@@ -92,28 +104,39 @@
       },
       "outputs": [],
       "source": [
-        "def find_first_divisible(start, end):\n",
+        "def sum_with_rules(n):\n",
         "    \"\"\"\n",
-        "    Find the first number divisible by both 7 and 13 in range [start, end].\n",
-        "    Use a while loop with break statement.\n",
+        "    Calculate sum from 1 to n with special rules:\n",
+        "    - Skip 3 and 5 (use continue)\n",
+        "    - Stop at 10 (use break)\n",
         "\n",
         "    Args:\n",
-        "        start (int): Starting number\n",
-        "        end (int): Ending number (inclusive)\n",
+        "        n (int): The upper limit\n",
         "\n",
         "    Returns:\n",
-        "        int: The first number divisible by both 7 and 13, or None if not found\n",
+        "        int: The sum following the rules above\n",
         "\n",
-        "    Example:\n",
-        "        find_first_divisible(1, 100) should return 91\n",
+        "    Examples:\n",
+        "        sum_with_rules(5) should return 10 (1+2+4, skipping 3 and 5)\n",
+        "        sum_with_rules(100) should return 37 (1+2+4+6+7+8+9, skipping 3 and 5, stopping before 10)\n",
         "    \"\"\"\n",
+        "    # DO NOT MODIFY: Variable initialization\n",
+        "    total = 0\n",
+        "    current = 1\n",
+        "    \n",
         "    # YOUR CODE HERE\n",
-        "    # Hint: Use a while loop and check if current number is divisible by both 7 and 13\n",
-        "    # Use break to exit the loop when you find the number\n",
-        "    pass\n",
+        "    # Hint: Use a while loop\n",
+        "    # Use 'break' to exit the loop when current reaches 10\n",
+        "    # Use 'continue' to skip 3 and 5 (don't add them to total)\n",
+        "    # Remember to increment 'current' in your loop!\n",
+        "    \n",
+        "    \n",
+        "    # DO NOT MODIFY: Return statement\n",
+        "    return total\n",
         "\n",
         "# Quick test (uncomment to test your function)\n",
-        "# print(find_first_divisible(1, 100))  # Should print 91"
+        "# print(sum_with_rules(5))   # Should print 10\n",
+        "# print(sum_with_rules(100)) # Should print 37"
       ]
     },
     {
@@ -170,25 +193,26 @@
         "total_score += ex1_score\n",
         "\n",
         "# Test Exercise 2\n",
-        "print(\"\\n📝 Testing Exercise 2: While Loop with Break\")\n",
+        "print(\"\\n📝 Testing Exercise 2: While Loop with Break and Continue\")\n",
         "print(\"-\" * 60)\n",
         "test_cases_2 = [\n",
-        "    ((1, 100), 91),\n",
-        "    ((100, 200), 182),\n",
-        "    ((1, 50), None),\n",
-        "    ((91, 91), 91)\n",
+        "    (5, 10),    # 1+2+4+skip3+skip5 = 7, but we stop before reaching anything >= n\n",
+        "    (9, 37),    # 1+2+4+6+7+8+9 (skip 3,5, stop before 10)\n",
+        "    (100, 37),  # Same as above - stops at 10\n",
+        "    (2, 3),     # 1+2 = 3\n",
+        "    (4, 7)      # 1+2+4 (skip 3) = 7\n",
         "]\n",
         "\n",
         "ex2_score = 0\n",
         "ex2_max = 5\n",
         "for i, (input_val, expected) in enumerate(test_cases_2, 1):\n",
         "    try:\n",
-        "        result = find_first_divisible(*input_val)\n",
+        "        result = sum_with_rules(input_val)\n",
         "        if result == expected:\n",
-        "            print(f\"✓ Test {i} PASSED: find_first_divisible{input_val} = {result}\")\n",
+        "            print(f\"✓ Test {i} PASSED: sum_with_rules({input_val}) = {result}\")\n",
         "            ex2_score += ex2_max / len(test_cases_2)\n",
         "        else:\n",
-        "            print(f\"✗ Test {i} FAILED: find_first_divisible{input_val} = {result}, expected {expected}\")\n",
+        "            print(f\"✗ Test {i} FAILED: sum_with_rules({input_val}) = {result}, expected {expected}\")\n",
         "    except Exception as e:\n",
         "        print(f\"✗ Test {i} ERROR: {e}\")\n",
         "\n",
